--- a/TourismAdventures/appsettings.Development.json
+++ b/TourismAdventures/appsettings.Development.json
@@ -4,6 +4,11 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    {
+      "ConnectionStrings": {
+        "DefaultConnection": "Data Source=.;Initial Catalog=TourismAdventures;Integrated Security=True"
+      }
     }
   }
 }
