make conn string

--- a/TourismAdventures/appsettings.Development.json
+++ b/TourismAdventures/appsettings.Development.json
@@ -1,14 +1,13 @@
 {
+  "ConnectionStrings": {
+    "dbConn": "Data Source=S.;Initial Catalog=TravelAdventures;Integrated Security=true;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    },
-    {
-      "ConnectionStrings": {
-        "DefaultConnection": "Data Source=.;Initial Catalog=TourismAdventures;Integrated Security=True"
-      }
     }
   }
 }
