change in app setting database name

--- a/TourismAdventures/appsettings.Development.json
+++ b/TourismAdventures/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "dbConn": "Data Source=S.;Initial Catalog=TravelAdventures;Integrated Security=true;"
+    "dbConn": "Data Source=.;Initial Catalog=TourismAdventures;Integrated Security=true;"
 
   },
   "Logging": {
